# n2p

./: Cargo.toml  README.md
src/: app.rs  components.rs  controller.rs  lib.rs  main.rs  model.rs  note.rs  tui.rs
src/components/: chat_view.rs  message_input.rs  topics.rs
