[package]
name = "n2p"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
libp2p = { version = "0.52", features = ["mdns", "gossipsub", "macros", "tokio", "tcp", "quic", "noise", "yamux"] }
thiserror = "1.0.60"
time = { version = "0.3.36", features = ["serde"] }
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.201", features = ["derive"] }
sha3 = "0.10.8"
ratatui = "0.27.0"
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"

[dev-dependencies]
rand = "0.8.5"
fake = { version = "2.9.2", features = ["derive", "time"] }
